--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.8"
 
 services:
+  redis:
+    image: redis:7.0.11-alpine
+
   django:
     container_name: django
     build:
@@ -15,3 +18,19 @@ services:
       - DEBUG=1
       - SECRET_KEY=django-insecure-wnh$i2w4g-(e2!0hgj$aw9%$wiu4)najm0@c!jdq5++^w^(!$y
       - ALLOWED_HOSTS=localhost, 127.0.0.1
+  
+
+  celery:
+    container_name: celery
+    build:
+      context: ./backend
+    
+    volumes:
+      - ./backend:/user/src/app
+    environment:
+      - DEBUG=1
+      - SECRET_KEY=django-insecure-wnh$i2w4g-(e2!0hgj$aw9%$wiu4)najm0@c!jdq5++^w^(!$y
+      - ALLOWED_HOSTS=localhost, 127.0.0.1
+
+    depends_on:
+      - redis
