--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     container_name: celery
     build:
       context: ./backend
-    
+    command: celery --app=core worker -l INFO
     volumes:
       - ./backend:/user/src/app
     environment:
