--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework==3.14.0
 kombu==5.3.2
 Markdown==3.4.4
 prompt-toolkit==3.0.39
+psycopg2-binary==2.9.7
 python-dateutil==2.8.2
 pytz==2023.3.post1
 redis==5.0.0
